# cleaner-robot-project

attach_table/: CMakeLists.txt  package.xml
attach_table/launch/: attach_server.launch.py
attach_table/src/: approach_service_server.cpp
attach_table/srv/: GoToLoading.srv
cartographer_slam/: CMakeLists.txt  package.xml
cartographer_slam/config/: cartographer.lua  starbot_real_area.pgm  starbot_real_area_keepout.pgm  starbot_real_area_keepout.yaml  starbot_sim_area.yaml  turtlebot_area.pgm
cartographer_slam/launch/: cartographer.launch.py
find_table/: CMakeLists.txt  package.xml
find_table/launch/: find.launch.py
find_table/src/: find_table_service_server.cpp
find_table/srv/: FindTable.srv
laser_segmentation/: CMakeLists.txt  package.xml
laser_segmentation/include/laser_segmentation/: laserSegmentation.hpp  parula.hpp
laser_segmentation/include/laser_segmentation/segmentation/: segmentation.hpp  segmentationJumpDistance.hpp  segmentationJumpDistanceMerge.hpp
laser_segmentation/launch/: segmentation.launch.py
laser_segmentation/params/: default_params.yml
laser_segmentation/rviz/: config.rviz
laser_segmentation/src/: laserSegmentation.cpp
laser_segmentation/src/segmentation/: segmentationJumpDistance.cpp  segmentationJumpDistanceMerge.cpp
localization_server/: CMakeLists.txt
localization_server/config/: amcl_config.yaml
localization_server/launch/: localization.launch.py
map_server/: CMakeLists.txt
map_server/config/: starbot_real_area.pgm  starbot_real_area.yaml  starbot_real_area_keepout.pgm  starbot_real_area_keepout.yaml  starbot_sim_area.pgm  starbot_sim_area_keepout.pgm  starbot_sim_area_keepout.yaml  starbot_sim_area_keepout_hold.pgm  starbot_sim_area_keepout_hold2.pgm
map_server/launch/: nav2_map_server.launch.py
map_server/rviz/: config.rviz
nav2_application/: package.xml  setup.cfg  setup.py
nav2_application/scripts/: robot_patrol.py
path_planner_server/: CMakeLists.txt
path_planner_server/config/: bt.yaml  controller.yaml  filters.yaml  navigate_w_replanning_and_recovery.xml  planner_server.yaml  recovery.yaml
path_planner_server/launch/: navigation.launch.py  pathplanner.launch.py
path_planner_server/rviz/: config.rviz
slg_msgs/: CMakeLists.txt  package.xml
slg_msgs/include/slg_msgs/: point2D.hpp  polygon.hpp  segment2D.hpp
slg_msgs/msg/: Centroids.msg
